--- a/app/views/gluttonberg/public/member_password_resets/edit.html.haml
+++ b/app/views/gluttonberg/public/member_password_resets/edit.html.haml
@@ -13,4 +13,4 @@
       = f.password_field :password_confirmation, :class => "text_field"
     
     %fieldset.form_element
-      = f.submit "Reset my password", :class => "button"
+      = f.submit t("reset_my_password"), :class => "button"
