--- a/app/views/gluttonberg/admin/asset_library/shared/_asset_panels.html.haml
+++ b/app/views/gluttonberg/admin/asset_library/shared/_asset_panels.html.haml
@@ -1,3 +1,4 @@
+- breadcrumbs_val = "?previous_page_title=#{previous_page_title}&return_url=#{sorter_url}"
 - if @assets.blank?
   %p.empty No assets
 - else
@@ -18,14 +19,14 @@
               %img{:src => asset.thumb_small_url  }
           %td
             %span.asset_title
-              %a{:href => admin_asset_url(asset), :class => "assetLink"}
+              %a{:href => admin_asset_url(asset)+breadcrumbs_val, :class => "assetLink"}
                 = asset.name
             %span.controls
-              %a{:href => admin_asset_url(asset), :class => "assetLink"}
+              %a{:href => admin_asset_url(asset)+breadcrumbs_val, :class => "assetLink"}
                 View
-              %a{:href => edit_admin_asset_url(asset), :class => "assetLink"}
+              %a{:href => edit_admin_asset_url(asset)+breadcrumbs_val, :class => "assetLink"}
                 Edit  
-              %a{:href => crop_admin_asset_url(asset), :class => "assetLink"}
+              %a{:href => crop_admin_asset_url(asset)+breadcrumbs_val, :class => "assetLink"}
                 Crop  
           %td.author
             = asset.asset_type.name
