--- a/app/views/gluttonberg/admin/asset_library/assets/show.html.haml
+++ b/app/views/gluttonberg/admin/asset_library/assets/show.html.haml
@@ -1,5 +1,7 @@
 - @window_title = "Asset Library"
-- @page_title = "#{link_to "Asset Library", admin_library_path} > #{@asset.name}"
+- prev_page = ""
+- prev_page = " > " + link_to(params[:previous_page_title].titleize, params[:return_url]) unless params[:return_url].blank? || params[:previous_page_title].blank?
+- @page_title = "#{link_to "Asset Library", admin_library_path} #{prev_page} > #{@asset.name}"
 - @page_image = "/gluttonberg/images/sidebar/icon_library.png"
 = sub_nav do
   = nav_link("Delete", delete_admin_asset_url(@asset) )
