--- a/app/views/gluttonberg/admin/asset_library/assets/show.html.haml
+++ b/app/views/gluttonberg/admin/asset_library/assets/show.html.haml
@@ -1,11 +1,13 @@
 - @window_title = "Asset Library"
 - prev_page = ""
 - prev_page = " > " + link_to(params[:previous_page_title].titleize, params[:return_url]) unless params[:return_url].blank? || params[:previous_page_title].blank?
+- breadcrumbs_val = "?previous_page_title=#{params[:previous_page_title]}&return_url=#{params[:return_url]}"
+
 - @page_title = "#{link_to "Asset Library", admin_library_path} #{prev_page} > #{@asset.name}"
 - @page_image = "/gluttonberg/images/sidebar/icon_library.png"
 = sub_nav do
   = nav_link("Delete", delete_admin_asset_url(@asset) )
-  = nav_link("Edit", edit_admin_asset_url(@asset))
+  = nav_link("Edit", edit_admin_asset_url(@asset)+breadcrumbs_val)
   /= nav_link("Crop", crop_admin_asset_url(@asset))
 %div.pageBlock
   %h2= @asset.name
