Member system, group access and two column new/edit page forms fixes

--- a/app/views/gluttonberg/admin/content/page_localizations/_form.html.haml
+++ b/app/views/gluttonberg/admin/content/page_localizations/_form.html.haml
@@ -17,12 +17,13 @@
       %br
       = f.label :slug
       = f.text_field(:slug, :id => 'page_slug')
-  
-    - if @page_localization.contents.length >= 1   
+      
+      
+    - if @page_localization.contents.length >= 1
       = block("Content") do
         - for content in @page_localization.contents
-          - unless @version.blank? || !content.versioned? 
-            - content.revert_to(@version)         
+          - unless @version.blank? || !content.versioned?
+            - content.revert_to(@version)
           = content_editor(content)
           %br
     - else
@@ -32,6 +33,6 @@
   .right_column 
     = f.fields_for :page , @page do |page_form|  
       = render :partial => "/gluttonberg/admin/content/pages/page_settings" , :locals => {:f => page_form}
-      
-  - if( Gluttonberg.localized? && @page.localizations &&  @page.localizations.length > 1 ) || @page_localization.contents.length >= 1
-    = form_controls(admin_page_path(params[:page_id]))
+    = form_controls(admin_page_path(params[:page_id]))  
+  /- if(( Gluttonberg.localized? && @page.localizations &&  @page.localizations.length > 1 ) || @page_localization.contents.length >= 1)
+    
