--- a/app/views/layouts/gluttonberg.html.haml
+++ b/app/views/layouts/gluttonberg.html.haml
@@ -17,6 +17,7 @@
     = wysiwyg_js_css_link_tag
     
     = javascript_include_tag "/gluttonberg/javascripts/gb_application" ,  :charset => "utf-8"
+    = custom_javascript_include_tag
     
     = csrf_meta_tag 
     
