Publishable custom models

--- a/lib/generators/gluttonberg/resource/templates/backend_view_new.html.haml
+++ b/lib/generators/gluttonberg/resource/templates/backend_view_new.html.haml
@@ -5,7 +5,12 @@
 = form_for(@<%= singular_name %>, :url => admin_<%= plural_name %>_path) do  |f|
   = gb_error_messages_for(@<%= singular_name %>)
 
-  = block("General") do
-    = render :partial => "form", :locals => {:f => f}
-    
-  = form_controls(admin_<%= plural_name %>_path)
+  .left_column
+    = block("General") do
+      = render :partial => "form", :locals => {:f => f}
+  
+  .right_column
+    %legend Publishing
+    - if can? :publish , <%=class_name %>
+      = f.publisable_dropdown  
+    = form_controls(admin_<%= plural_name %>_path)
