two column styling for forms

--- a/app/views/gluttonberg/admin/content/articles/_form.html.haml
+++ b/app/views/gluttonberg/admin/content/articles/_form.html.haml
@@ -4,46 +4,50 @@
 
 = form_for(@article, :url => url , :html => {:class => "validation"}) do  |f|
   = gb_error_messages_for(@article)
-  
-  = block("Article") do
-    = f.hidden_field(:user_id, :value => current_user.id) if @article.user_id.blank?
-    = f.hidden_field(:blog_id, :value => @blog.id) if @article.blog_id.blank?
-    %p
-      = f.label :title
-      = f.text_field(:title, :id => "page_title" , :class => "required")
-    %p
-      = f.label :slug
-      = f.text_field(:slug, :id => 'page_slug')
-    %p
-      = f.label :author
-      = f.select("author_id" ,  @authors.collect{|a| [a.email , a.id] } , :class => "required" )
-    %p
-      = f.label :featured_image_id
-      = f.asset_browser( :featured_image_id ,  opts = { :filter => "image"   } )  
-      = f.clear_asset( :featured_image_id , opts = {  :button_class => "button clear_button"} )
-      
-    %p
-      = f.label :excerpt
-      = f.text_area(:excerpt  , :class => "jwysiwyg" )
-    %p
-      = f.label :body
-      = f.text_area(:body  , :class => "jwysiwyg" )
+  .left_column
+    %fieldset
+      %legend Article
     
-    %p
-      = f.label :article_category_list , "Category"
-      = f.text_field(:article_category_list, :class => "tags" , :rel => tags_string("article_category") ) 
-    
-    %p
-      = f.label :tag_list , "Tags"
-      = f.text_field(:tag_list, :class => "tags" , :rel => tags_string("tag") )   
+      %p
+        = f.hidden_field(:user_id, :value => current_user.id) if @article.user_id.blank?
+        = f.hidden_field(:blog_id, :value => @blog.id) if @article.blog_id.blank?
+      %p
+        = f.label :title
+        = f.text_field(:title, :id => "page_title" , :class => "required")
+      %p
+        = f.label :slug
+        = f.text_field(:slug, :id => 'page_slug')
+      %p
+        = f.label :author
+        = f.select("author_id" ,  @authors.collect{|a| [a.email , a.id] } , :class => "required" )
+      %p
+        = f.label :featured_image_id
+        = f.asset_browser( :featured_image_id ,  opts = { :filter => "image"   } )  
+        = f.clear_asset( :featured_image_id , opts = {  :button_class => "button clear_button"} )
       
-    %p
-      = f.label :disable_comments
-      = f.check_box(:disable_comments, :id => 'disable_comments')  
-  
-  - if can? :publish , Gluttonberg::Article  
-    = f.publisable_dropdown 
-  = form_controls(admin_blog_articles_path(@blog))
+      %p
+        = f.label :excerpt
+        = f.text_area(:excerpt  , :class => "jwysiwyg" )
+      %p
+        = f.label :body
+        = f.text_area(:body  , :class => "jwysiwyg" )
+    
+      %p
+        = f.label :article_category_list , "Category"
+        = f.text_field(:article_category_list, :class => "tags" , :rel => tags_string("article_category") ) 
+    
+      %p
+        = f.label :tag_list , "Tags"
+        = f.text_field(:tag_list, :class => "tags" , :rel => tags_string("tag") )   
+      
+      %p
+        = f.label :disable_comments
+        = f.check_box(:disable_comments, :id => 'disable_comments')  
+
+  .right_column
+    - if can? :publish , Gluttonberg::Article  
+      = f.publisable_dropdown 
+    = form_controls(admin_blog_articles_path(@blog))
 
 
 = enable_jwysiwyg_on_class("jwysiwyg")
