articles and settings form enhancement

--- a/app/views/gluttonberg/admin/content/articles/index.html.haml
+++ b/app/views/gluttonberg/admin/content/articles/index.html.haml
@@ -20,7 +20,7 @@
           Controls
     %tbody
       - @articles.each do |article|
-        %tr
+        %tr{ :class => "#{cycle("even", "odd")}"}
           %td{:style => "width:50%;"}
             = article.title
           %td{:style => "width:15%;"}
