--- a/app/views/gluttonberg/admin/content/blogs/_form.html.haml
+++ b/app/views/gluttonberg/admin/content/blogs/_form.html.haml
@@ -18,8 +18,8 @@
         = f.label :slug
         = f.text_field(:slug, :id => 'page_slug')
       %p
-        = f.label :description
-        = f.text_area(:description , :class => "jwysiwyg"  )    
+        = f.label :description,:class =>"block_label"
+        = f.text_area(:description , :class => "jwysiwyg", :width => "545"  )    
 
       %p
         = f.label :moderation_required , "Moderation required?"
