--- a/public/gluttonberg/stylesheets/admin.css
+++ b/public/gluttonberg/stylesheets/admin.css
@@ -1125,8 +1125,9 @@ p.newLink {
       list-style-type: none; }
   #helpDialog .display,
   #assetsDialog .display {
-		padding: 1.5em 10px 0;
+		padding: 0;
 		width: 100%;
+		height: 85%;
 		float: left;
     clear: both;
  		overflow: auto; }
@@ -2406,6 +2407,13 @@ ul.tagit {
 	position: absolute;
 	top: 119px;
 	left: 34px; }
+#login_tab_section .flash {
+	position: absolute;
+	top: 55px;
+}
+#form #login_tab_section .last {
+	margin: -35px 0;
+}
 #password_reset_tab_section, #password_reset_tab_section, #login_tab_section {
 	display: none; }
 #password_reset_tab_section.active, #login_tab_section.active {
@@ -2652,7 +2660,7 @@ p.no_content {
     	border-top-right-radius: 0 0;
     	border-bottom-left-radius: 0 0;
     	border-bottom-right-radius: 0 0;
-    	top: 15px;
+    	top: -15px;
 }    
 
 #flash {
